--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,204 +1,1 @@
-* {
-  font-family: "Roboto", sans-serif;
-}
-
-header {
-  position: relative;
-  height: 50px;
-}
-
-.header-navigation {
-  position: fixed;
-  width: 100%;
-  height: 50px;
-  background-color: #212121;
-  z-index: 2;
-}
-
-.menu {
-  display: flex;
-  justify-content: space-between;
-  padding: 13px 70px;
-  margin: 0;
-  list-style-type: none;
-}
-
-.menu-item {
-  border-right: 2px dotted black;
-  padding-right: 40px;
-}
-
-.menu-item:last-child {
-  border: none;
-}
-
-.menu-link:link,
-.menu-link:visited {
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 15px;
-  font-weight: 300;
-}
-
-.subheader {
-  position: absolute;
-  top: 50px;
-  width: 100%;
-  height: 84px;
-  background-color: rgba(0, 0, 0, 0.6);
-  padding: 16px 0;
-}
-
-.subheader-logo {
-  display: block;
-  max-width: 100%;
-  margin-bottom: 4px;
-}
-
-.subheader-logo-text {
-  font-size: 13px;
-  font-weight: 400;
-  color: #ffffff;
-  opacity: 0.5;
-}
-
-.subheader-call {
-  font-size: 12px;
-  font-weight: 300;
-  text-align: right;
-  color: #ffffff;
-  margin-bottom: 7px;
-}
-
-.subheader-phone:link,
-.subheader-phone:visited {
-  display: block;
-  font-size: 22px;
-  font-weight: 400;
-  text-transform: uppercase;
-  text-align: right;
-  line-height: 12px;
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.subheader-btn {
-  font-size: 14px;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: #ffffff;
-
-  width: 172px;
-  height: 46px;
-  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
-  border: none;
-  border-radius: 4px;
-  background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
-}
-
-.section-offer {
-  min-height: 800px;
-  background: url("../img/uber_bg.png") center center/cover no-repeat;
-  padding: 150px 0 135px 0;
-  text-align: center;
-}
-
-.offer-text {
-  color: #ffffff;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 60px;
-  line-height: 60px;
-  margin: 0;
-  margin-bottom: 22px;
-}
-
-.offer-subtext {
-  color: #ffffff;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 36px;
-  line-height: 36px;
-  margin: 0;
-  margin-bottom: 23px;
-}
-
-.offer-descr {
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 24px;
-}
-
-.offer-btn {
-  font-size: 18px;
-  font-weight: 400;
-  color: #ffffff;
-  text-transform: uppercase;
-  display: block;
-  margin: 118px auto 0 auto;
-  width: 259px;
-  height: 63px;
-  box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
-  border: none;
-  border-radius: 4px;
-  background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
-}
-
-.section_reasons {
-  padding: 71px 0 65px 0;
-}
-
-.label {
-  margin: 0 auto 38px auto;
-  height: 24px;
-  width: 112px;
-  padding: 5px 12px;
-  background-color: #000000;
-  color: #ffffff;
-  font-size: 11px;
-  font-weight: 300;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.title {
-  font-size: 38px;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-align: center;
-  color: #222222;
-  margin-bottom: 35px;
-}
-
-.reasons-round {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 100px;
-  width: 113px;
-  height: 113px;
-  background-color: #1eacc7;
-  border-radius: 100%;
-}
-
-.reasons-text span {
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 21px;
-  color: #1eacc7;
-}
-
-.reasons-text {
-  font-size: 15px;
-  font-weight: 300;
-  line-height: 21px;
-  color: #202020;
-  max-width: 370px;
-}
-
-.row {
-  justify-content: space-between;
-}
+*{font-family:"Roboto",sans-serif}header{position:relative;height:50px}.header-navigation{position:fixed;width:100%;height:50px;background-color:#212121;z-index:2}.hamburger{display:none}.menu{display:flex;justify-content:space-between;padding:13px 70px;margin:0;list-style-type:none}.menu-item{border-right:2px dotted #000;padding-right:40px}.menu-item:last-child{border:none;padding-right:0}.menu-link:link,.menu-link:visited{text-decoration:none;color:#fff;font-size:15px;font-weight:300}.subheader{position:absolute;top:50px;width:100%;height:84px;background-color:rgba(0,0,0,.6);padding:16px 0}.subheader-logo{display:block;max-width:100%;margin-bottom:4px}.subheader-logo-text{font-size:13px;font-weight:400;color:#fff;opacity:.5}.subheader-call{font-size:12px;font-weight:300;text-align:right;color:#fff;margin-bottom:7px}.xs-visible.subheader-phone:link,.xs-visible.subheader-phone:visited{display:none}.subheader-phone:link,.subheader-phone:visited{display:block;font-size:22px;font-weight:400;text-transform:uppercase;text-align:right;line-height:12px;text-decoration:none;color:#fff}.subheader-btn{font-size:14px;font-weight:400;text-transform:uppercase;color:#fff;width:172px;height:46px;box-shadow:inset 0 -3px 0 rgba(0,0,0,.12);border:none;border-radius:4px;background-image:linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);text-shadow:1px 1px 0 rgba(0,0,0,.21)}.subheader-btn:hover{background-image:none;background-color:#1eacc7}.section-offer{min-height:800px;background:url("../img/uber_bg.png") center center/cover no-repeat;padding:150px 0 135px 0;text-align:center}.offer-text{color:#fff;font-weight:700;text-transform:uppercase;font-size:60px;line-height:60px;margin:0;margin-bottom:22px}.offer-subtext{color:#fff;font-weight:700;text-transform:uppercase;font-size:36px;line-height:36px;margin:0;margin-bottom:23px}.offer-descr{color:#fff;font-size:18px;font-weight:400;line-height:24px}.offer-btn{font-size:18px;font-weight:400;color:#fff;text-transform:uppercase;display:block;margin:118px auto 0 auto;width:259px;height:63px;box-shadow:inset 0 -4px 0 rgba(0,0,0,.12);border:none;border-radius:4px;background-image:linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);text-shadow:1px 1px 0 rgba(0,0,0,.21)}.offer-btn:hover{background-image:none;background-color:#1eacc7}.section_reasons{padding:71px 0 65px 0}.label{margin:0 auto 30px auto;height:24px;width:112px;padding:5px 12px;background-color:#000;color:#fff;font-size:11px;font-weight:400;text-align:center;text-transform:uppercase}.title{font-size:38px;font-weight:700;text-transform:uppercase;text-align:center;margin-bottom:35px}.subtitle{font-weight:400;font-size:17px;text-align:center;margin:-35px 0 30px 0}.reasons-round{display:flex;justify-content:center;align-items:center;margin-left:50px;width:110px;height:110px;background-color:#1eacc7;border-radius:100%}.reasons-text{font-size:15px;font-weight:300;line-height:21px;color:#202020;max-width:100%;margin-bottom:20px}.reasons-text span{font-size:16px;font-weight:400;line-height:21px;color:#1eacc7}.section-mobileapp{padding:48px 0 80px 0;min-height:864px;background:url("../img/mobile_bg.png") center center/cover no-repeat}.mobileapp-item{max-width:100%;height:280px;margin:0 auto;margin-bottom:20px;padding-top:90px;position:relative}.mobileapp-item-img1{background:url("../img/card-1.png") center center/cover no-repeat}.mobileapp-item-img2{background:url("../img/card-2.png") center center/cover no-repeat}.mobileapp-item-img3{background:url("../img/card-3.png") center center/cover no-repeat}.mobileapp-item-img4{background:url("../img/card-4.png") center center/cover no-repeat}.mobileapp-item-img5{background:url("../img/card-5.png") center center/cover no-repeat}.mobileapp-item-img6{background:url("../img/card-6.png") center center/cover no-repeat}.mobileapp-item-text{font-weight:400;font-size:24px;line-height:31px;text-align:center;text-transform:uppercase;color:#fff}.mobileapp-item-plus{width:26px;height:26px;border-radius:100%;margin:0 auto;background:#000;display:flex;align-items:center;justify-content:center;position:absolute;bottom:35px;left:50%;transform:translateX(-50%);cursor:pointer}.mobileapp-item-plus:before{content:"";display:block;width:14px;height:2px;background-color:#1eacc7;transition:.5s all}.mobileapp-item-plus:after{content:"";display:block;width:2px;height:14px;background-color:#1eacc7;position:absolute;transition:.5s all}.mobileapp-item-plus:hover:before,.mobileapp-item-plus:hover:after{background-color:#ff5656}.section-promo{min-height:898px;position:relative;background:url("../img/mobile_bg.png") center center/cover no-repeat}.section-promo .label{background:#fff;color:#000}.section-promo .title,.section-promo .subtitle{color:#fff}.section-promo-part{background:#000;padding-top:30px;min-height:500px}.section-promo-img{position:absolute;bottom:180px;left:50%;transform:translateX(-50%)}.section-promo-text{font-weight:300;font-size:17px;line-height:24px;text-align:center}.section-require{padding:60px 0 90px 0}.section-require-title{font-weight:400;font-size:22px;color:#1eacc7;margin-bottom:15px}.section-require-list{list-style-type:none;padding-left:50px;max-width:100%}.section-require-list li{position:relative;font-weight:300;font-size:17px;line-height:24px;margin-bottom:5px}.section-require-list li:before{content:"";display:block;width:21px;height:20px;background:url("../icons/check_blue.svg") center center/cover no-repeat;position:absolute;left:-30px;top:3px}.section-require-subtitle{font-weight:300;font-size:17px;color:#1eacc7;margin-bottom:60px}.section-require .accent .section-require-title{color:#ff5656}.section-require .accent .section-require-list li:before{content:"";background:url("../icons/check_red.svg") center center/cover no-repeat}.section-cities{position:relative;min-height:720px;padding-top:48px;background:url("../img/world_bg.png") center center/cover no-repeat}.section-cities .label{background:#fff;color:#000}.section-cities .title,.section-cities .subtitle{color:#fff}.section-cities a{display:block;position:absolute;left:50%;transform:translateX(-50%);bottom:48px;font-weight:400;font-size:15px;text-transform:uppercase;color:#1eacc7}.section-cities a:link,.section-cities a:visited{text-decoration:none}.section-cities a:hover{color:#ff5656;transition:.6s all}.footer{min-height:150px;padding:20px 40px 20px 40px;position:relative}.footer-social{display:flex;align-items:center;gap:10px;position:absolute;top:50%;transform:translateY(-50%)}.footer-social-fb,.footer-social-tw,.footer-social-in,.footer-social-insta{width:26px;height:26px;color:#000;transition:.6s all}.footer-social-fb:hover,.footer-social-tw:hover,.footer-social-in:hover,.footer-social-insta:hover{scale:1.3 1.3}.footer-appdown{display:flex;align-items:center;gap:10px;position:absolute;bottom:50%;transform:translateY(50%);right:40px}.footer-appdown-ios,.footer-appdown-android,.footer-appdown-windows{width:26px;height:26px;color:#000;transition:.6s all}.footer-appdown-ios:hover,.footer-appdown-android:hover,.footer-appdown-windows:hover{scale:1.3 1.3}.footer-info{text-align:center}.footer-info hr{width:301px;height:7px;background:#1eacc7;border:none;margin:0 auto;margin-bottom:25px}.footer-info-link-1{display:flex;align-items:center;justify-content:center;gap:40px;padding:0;list-style-type:none}.footer-info-link-1 a{font-weight:300;font-size:15px;text-transform:uppercase;color:#070716;transition:.6s all}.footer-info-link-1 a:link,.footer-info-link-1 a:visited{text-decoration:none}.footer-info-link-1 a:hover{color:#ff5656;transition:.6s all}.footer-info-link-2{display:flex;justify-content:center;align-items:center;gap:20px;padding:0;list-style-type:none}.footer-info-link-2 a{font-weight:300;font-size:11px;text-transform:uppercase;color:#999;transition:.6s all}.footer-info-link-2 a:link,.footer-info-link-2 a:visited{text-decoration:none}.footer-info-link-2 a:hover{color:#ff5656;transition:.6s all}.footer-info .lang{font-weight:400;font-size:11px;text-transform:uppercase;text-align:center;color:#1eacc7;transition:.6s all}.footer-info .lang:link,.footer-info .lang:visited{text-decoration:none}.footer-info .lang:hover{color:#ff5656;transition:.6s all}@media(max-width: 1399px){.menu-item{padding-right:30px}}@media(max-width: 1199px){.menu-item{padding-right:20px}.menu-link:link,.menu-link:visited{font-size:13px}.offer-text{font-size:50px}.offer-subtext{font-size:30px;margin-bottom:35px}.offer-descr{font-size:14px;line-height:20px}.reasons-round{margin-left:20px}}@media(max-width: 991px){.menu-item{padding-right:12px}.menu-link:link,.menu-link:visited{font-size:10px}.subheader-logo img{width:100%}.subheader-logo-text{font-size:11px}.subheader-phone:link,.subheader-phone:visited{font-size:20px}.subheader-btn{width:100%;height:42px}.section-offer{min-height:500px;padding:130px 0 80px 0}.offer-text{font-size:40px;margin-bottom:0px}.offer-subtext{font-size:25px;margin-bottom:25px}.offer-btn{margin:60px auto 0 auto;font-size:16px;width:220px;height:53px}.section_reasons{padding:50px 0 35px 0}.label{margin:0 auto 20px auto}.title{font-size:30px;margin-bottom:30px}.subtitle{font-size:14px;margin:-25px 0 25px 0}.reasons-round{width:90px;height:90px;margin-left:10px}.reasons-round img{width:60%}.section-mobileapp{padding:40px 0 60px 0;min-height:664px}.mobileapp-item{height:216px;padding-top:80px}.mobileapp-item-text{font-size:15px;line-height:20px}.mobileapp-item-plus{bottom:25px}.section-promo{min-height:530px}.section-promo-part{min-height:330px}.section-promo-img{top:180px}.section-promo-img img{width:100%}.section-promo-text{font-size:15px;line-height:20px}.section-require{padding:40px 0 70px 0}.section-require-title{font-size:18px;margin-bottom:10px}.section-require-list{padding-left:40px}.section-require-list li{font-size:15px;line-height:19px}.section-require-list li:before{width:16px;height:15px;left:-25px;top:2px}.section-require-subtitle{font-size:15px;margin-bottom:40px}.section-cities{min-height:520px;padding-top:38px}.section-cities a{font-size:12px}.footer{min-height:130px}.footer-info hr{width:201px;height:5px;margin-bottom:10px}.footer-info-link-1{gap:20px;margin-bottom:0}.footer-info-link-1 a{font-size:12px}.footer-info-link-2{gap:10px;margin-bottom:0}.footer-info-link-2 a{font-size:10px}}@media(max-width: 767px){.menu{position:fixed;flex-direction:column;align-items:center;justify-content:center;gap:20px;top:0;right:0;left:-100%;width:50%;height:100vh;padding:20px 15px;background-color:rgba(0,0,0,.8);transition:.7s all}.menu-active{left:0}.menu-item{border:none;padding-right:0}.menu-link:link,.menu-link:visited{font-size:20px}.hamburger{display:block;position:absolute;right:10px;top:50%;transform:translateY(-50%);width:25px;height:18px}.hamburger span{display:block;height:2px;margin-bottom:4px;background-color:#fff;transition:.5s all}.hamburger-active span{margin-bottom:-2px}.hamburger-active span:first-child{transform:translateY(3px) rotate(45deg)}.hamburger-active span:nth-child(2){display:none}.hamburger-active span:last-child{transform:translateY(3px) rotate(-45deg)}.xs-hidden{display:none}.xs-visible.subheader-phone:link,.xs-visible.subheader-phone:visited{display:block;margin-bottom:10px}.subheader-logo-text{display:none}.subheader-btn{float:right;font-size:12px;width:150px;height:26px}.offer-descr{display:none}.section_reasons{padding-top:40px}.title{font-size:26px;font-weight:700;text-transform:uppercase;text-align:center;margin-bottom:35px}.subtitle{font-weight:400;font-size:15px;text-align:center;margin:-35px 0 30px 0}.reasons-round{margin:0 auto 20px auto}.reasons-text{margin:0 auto 20px auto;width:290px}.mobileapp-item{width:290px}.section-promo-img{top:160px}.section-promo-part{min-height:400px}.section-promo-text{color:#fff}.footer-social{top:80%}.footer-appdown{right:40px;bottom:20%}}@media(max-width: 575px){header{height:33px}.header-navigation{height:33px}.subheader{top:33px}.subheader-logo{margin-bottom:0}.menu{width:85%}.xs-visible.subheader-phone:link,.xs-visible.subheader-phone:visited{margin-bottom:5px;font-size:12px}.subheader{height:62px;padding:10px 0}.subheader-phone:link,.subheader-phone:visited{font-size:12px}.subheader-btn{font-size:10px;width:110px;height:22px}.section-offer{min-height:400px}.offer-text{font-size:30px;line-height:35px;margin-bottom:30px}.offer-subtext{font-size:20px;line-height:25px;margin-bottom:35px}.section-promo{min-height:303px}.section-promo .title,.section-promo .subtitle{display:none}.section-promo-part{min-height:393px}.section-promo-text{width:300px}.section-promo-img{bottom:100%;top:27%}.section-cities{min-height:360px}.footer{min-height:255px;padding:10px}.footer-info hr{width:201px;height:5px;margin-bottom:10px}.footer-info-link-1{margin-bottom:0}.footer-info-link-1 a{font-size:12px}.footer-info-link-2{display:grid;grid-template-columns:50% 33%;grid-template-rows:1fr 1fr;text-align:start;margin-bottom:0}.footer-info-link-2 a{font-size:10px}}
